2015-07-15  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c, src/rcfile.c, doc/nanorc.sample.in, doc/man/nano.1,
	doc/man/nanorc.5, doc/texinfo/nano.texi, doc/syntax/nanorc.nanorc:
	Unabbreviate the long option --const to --constantshow, and --poslog
	to --positionlog, to be more understandable.
	* src/nano.h, src/global.c (add_to_sclist), src/help.c (help_init),
	src/rcfile.c (parse_binding), src/winio.c (get_shortcut): Rename
	the 'menu' item in the sc (shortcut) struct to 'menus', as it can
	refer to more than one menu.

2015-07-13  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_int_spell_fix, do_alt_speller): Remove an unneeded
	condition; 'added_magicline' can only be true when NO_NEWLINES isn't.
	* src/files.c (replace_buffer): Prevent a segfault when spellchecking
	a marked region and nonewlines isn't set.

2015-07-12  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_alt_speller): Rename the variable 'totsize_save'
	to 'size_of_surrounding', to better describe what it contains.
	* src/files.c (read_file): Remove a stray space from a message.

2015-07-10  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (delete_opennode): Plug a small memory leak.
	* src/files.c (do_lockfile): Rename a variable; it does not contain
	the size of the file but the size of the name.
	* src/nano.c (do_toggle): Elide an unneeded variable.
	* src/files.c: Unwrap some lines and rewrap some others in a more
	congenial manner; tweak some comments and whitespace and braces.
	* src/files.c (read_line): Remove two lines of dead code.
	* src/files.c (read_line): Rearrange a few lines and some whitespace.

2015-07-06  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (add_to_sclist), src/help.c (help_init), src/nano.h,
	src/rcfile.c (parse_binding): When defining the toggles, give each
	of them a sequence number, so that, when they are rebound, they can
	still be listed in the original order in the help text.